[project]
name = "sprite-fastapi"
version = "0.1.0"
description = "Sprite SDK for FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sprite_sdk"]
